--- a/templates/chp.html
+++ b/templates/chp.html
@@ -7,9 +7,9 @@ change password
 
 <form action="/changepassword" method="post" class="login">
 
-        <input name="opass" placeholder="Current password" type="password" class="loginput">
-        <input name="npass" placeholder="New password" type="password" class="loginput">
-        <input name="cpass" placeholder="Confirm new password" type="password" class="loginput">
-        <input type="submit" value="Submit" style="width:10%; height:10%; border-radius:5px;font-size:100%">
+        <input name="opass" placeholder="Чинний пароль" type="password" class="loginput">
+        <input name="npass" placeholder="Новий пароль" type="password" class="loginput">
+        <input name="cpass" placeholder="Підтвердити пароль" type="password" class="loginput">
+        <input type="submit" value="Змінити" style="width:10%; height:10%; border-radius:5px;font-size:100%">
 </form>
 {% endblock %}
