--- a/templates/register.html
+++ b/templates/register.html
@@ -6,10 +6,10 @@ registration
 {% block main %}
 <form action="/register" method="post" class="login">
 
-        <input name="name" placeholder="Enter username" type="text" class="loginput">
-        <input name="password" placeholder="Enter your password" type="password" class="loginput">
-        <input name="confirmation" placeholder="Confirm your password" type="password" class="loginput">
-        <input type="submit" value="Submit" style="width:10%; height:10%; border-radius:5px;font-size:100%">
+        <input name="name" placeholder="Введіть ім'я" type="text" class="loginput">
+        <input name="password" placeholder="Введіть пароль" type="password" class="loginput">
+        <input name="confirmation" placeholder="Підтвердити пароль" type="password" class="loginput">
+        <input type="submit" value="Зареєструватися" style="width:10%; height:10%; border-radius:5px;font-size:100%">
 
 </form>
 {% endblock %}
