--- a/templates/report.html
+++ b/templates/report.html
@@ -5,17 +5,17 @@ report
 {% block main %}
 
 <form action="/report" method="post" class="tran">
-        <label for="start" style="grid-column: 1; grid-row: 1;" class="trans">Start date</label><br>
+        <label for="start" style="grid-column: 1; grid-row: 1;" class="trans">Початкова дата:</label><br>
         <input type="date" name="start" style="grid-column: 1; grid-row: 2;" class="tri">
-        <label for="finish" style="grid-column: 2; grid-row: 1;" class="trans">Finish date:</label><br>
+        <label for="finish" style="grid-column: 2; grid-row: 1;" class="trans">Кінцева дата:</label><br>
         <input type="date" name="finish" style="grid-column: 2; grid-row: 2;" class="tri">
-        <button type="submit" style="grid-column: 3; grid-row: 2;font-size: 80%;width: 30% ">Generate report</button>
+        <button type="submit" style="grid-column: 3; grid-row: 2;font-size: 80%;width: 30% ">Сформувати звіт</button>
         {% if uah and tax%}
 
-        <p style="grid-column: 1; grid-row: 3;" class="trans">Gross income for period {{ uah }} &#8372; </p>
-        <p style="grid-column: 2; grid-row: 3;" class="trans">Tax needs to be paid for period {{ tax }} &#8372;</p>
-        <p style="grid-column: 3; grid-row: 3;" class="trans">USC needs to be paid for period {{ usc }} &#8372;</p>
-        <p style="grid-column: 2; grid-row: 4;" class="trans">Net income for period {{ net }} &#8372;</p>
+        <p style="grid-column: 1; grid-row: 3;" class="trans">Валовий дохід за період {{ uah }} &#8372; </p>
+        <p style="grid-column: 2; grid-row: 3;" class="trans">Податку до сплати {{ tax }} &#8372;</p>
+        <p style="grid-column: 3; grid-row: 3;" class="trans">ЄСВ до сплати {{ usc }} &#8372;</p>
+        <p style="grid-column: 2; grid-row: 4;" class="trans">Чистий дохід {{ net }} &#8372;</p>
         {% else %}
 
         {% endif %}
