--- a/templates/transactions.html
+++ b/templates/transactions.html
@@ -6,11 +6,11 @@ transactions
 <h1 style="text-align:center">Transactions</h1>
 <table>
 <tr>
-    <th>Sum</th>
-    <th>Currency</th>
-    <th>Rate</th>
-    <th>UAH</th>
-    <th>Date</th>
+    <th>Сума</th>
+    <th>Валюта</th>
+    <th>Курс</th>
+    <th>Сума в грн</th>
+    <th>Дата</th>
     <th></th>
 </tr>
 {% for row in transactions %}
