--- a/templates/transactions.html
+++ b/templates/transactions.html
@@ -23,7 +23,7 @@ transactions
     <td>
         <form action="/transactions" method="post">
             <input name="id" type="hidden" value="{{ row.id }}">
-            <input type="submit" value="Remove">
+            <input type="submit" value="Видалити">
         </form>
     </td>
 </tr>
