--- a/templates/transactions.html
+++ b/templates/transactions.html
@@ -3,7 +3,7 @@
 transactions
 {% endblock %}
 {% block main %}
-<h1 style="text-align:center">Transactions</h1>
+<h1 style="text-align:center">Транзакції</h1>
 <table>
 <tr>
     <th>Сума</th>
