--- a/static/style.css
+++ b/static/style.css
@@ -90,7 +90,7 @@ footer p a
 .tran
 {
     display: grid;
-    grid-template-colums: auto auto auto;
+    grid-template-columns: auto auto auto;
     grid-template-rows: 30% 30% 30%;
     max-width: 100%;
     height: 70%;
