add step attribute for input

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@ home
 <h1 style="text-align: center">Зареєструвати дохід:</h1>
 <form action="/" method="post" class="tran">
         <label for="sum" style="grid-column: 1; grid-row: 1;" class="trans">Сума:</label><br>
-        <input type="number" min="1" name="sum" style="grid-column: 1; grid-row: 2;" class="tri">
+        <input type="number" step="0.01" min="1" name="sum" style="grid-column: 1; grid-row: 2;" class="tri">
         <label for="currency" style="grid-column: 2; grid-row: 1;" class="trans">Валюта:</label><br>
         <select name="currency" style="grid-column: 2; grid-row: 2;" class="tri">
             <option selected value="UAH">&nbsp UAH</option>
