--- a/templates/layout.html
+++ b/templates/layout.html
@@ -51,7 +51,7 @@
     </main>
 
     <footer style="text-align: center">
-        <p>Copiright &copy; 2021 This app is made by <a href="mailto:mixalv@gmail.com">Mykhailo Khomenko</a> as a final project for <a href="https://cs50.harvard.edu/x/2021/" target="_blank">CS50x</a></p>
+        <p>Copyright &copy; 2021 This app is made by <a href="mailto:mixalv@gmail.com">Mykhailo Khomenko</a> as a final project for <a href="https://cs50.harvard.edu/x/2021/" target="_blank">CS50x</a></p>
     </footer>
 
 </body>
